syntax = "proto3";

option go_package = "github.com/evrblk/monstera-example/tinyurl/gatewaypb";

package com.evrblk.monstera_example.tinyurl.gatewaypb;

service TinyUrlServiceApi {
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}

  rpc GetShortUrl(GetShortUrlRequest) returns (GetShortUrlResponse) {}
  rpc CreateShortUrl(CreateShortUrlRequest) returns (CreateShortUrlResponse) {}
  rpc ListShortUrls(ListShortUrlsRequest) returns (ListShortUrlsResponse) {}
}

message GetUserRequest {
  string user_id = 1;
}
message GetUserResponse {
  User user = 1;
}

message GetShortUrlRequest {
  string short_url = 1;
}

message GetShortUrlResponse {
  ShortUrl short_url = 1;
}

message ListShortUrlsRequest {
  string user_id = 1;
}

message ListShortUrlsResponse {
  repeated ShortUrl short_urls = 1;
}

message CreateShortUrlRequest {
  string user_id = 1;
  string full_url = 2;
}

message CreateShortUrlResponse {
  ShortUrl short_url = 1;
}

message ShortUrl {
  string id = 1;
  string full_url = 2;
  int64 created_at = 3;
}

message User {
  string id = 1;
  int64 created_at = 2;
  int64 updated_at = 3;
}
